@@ -35,6 +35,12 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.3.13" date="2020-06-09">
+      <description>
+	<p>Fixed missing automation of ags-fx-volume.</p>
+      </description>
+    </release>
+
     <release version="3.3.10" date="2020-05-31">
       <description>
 	<p>More fixes to AgsAudiorec.</p>
