@@ -1,3 +1,8 @@
+ags (3.3.13)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed missing automation ports of ags-fx-volume
+
 ags (3.3.12)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
